Added media query for min size screen.

--- a/riotMeet.css
+++ b/riotMeet.css
@@ -1,4 +1,4 @@
-
+@media (min-width: 30em){
     *{
         margin-left:0;
         margin-right: 0;
@@ -123,3 +123,4 @@
         font-family: monospace;
     }
 
+}
